--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 <body>
     <h1>welcome to class</h1>
+    <h1>hello miris</h1>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magni ea at vitae. Dolorum, consectetur odit quae nemo
         cum quibusdam sequi!l</p>
 </body>
