--- a/index.html
+++ b/index.html
@@ -4,17 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Alkaline</title>
 </head>
 
 <body>
     <header>
         <img src="jeff.jpeg" alt="jeff" width="38x38">
         <nav>
-            <a href="content.html">content</a>
-            <p><a href="about.html">about</a></p>
-            <p><a href="terms.html">terms</a></p>
-            <p><a href="conditon.html">conditon</a></p>
+            <a href="index.html">Homepage</a>
+            <p><a href="contact.html">Contact</a></p>
+            <p><a href="aboutUs.html">AboutUs</a></p>
+            <p><a href="termsAndConditions.html">Terms And Conditions</a></p>
+
 
         </nav>
         <div class="profile">
@@ -29,7 +30,6 @@
     <footer>
 
     </footer>
-
 </body>
 
 </html>
