--- a/termsAndConditions.html
+++ b/termsAndConditions.html
@@ -11,10 +11,11 @@
     <header>
         <img src="jeff.jpeg" alt="jeff" width="38x38">
         <nav>
-            <a href="content.html">content</a>
-            <p><a href="about.html">about</a></p>
-            <p><a href="terms.html">terms</a></p>
-            <p><a href="conditon.html">conditon</a></p>
+            <a href="index.html">Homepage</a>
+            <p><a href="contact.html">Contact</a></p>
+            <p><a href="aboutUs.html">AboutUs</a></p>
+            <p><a href="termsAndConditions.html">Terms And Conditions</a></p>
+
 
         </nav>
         <div class="profile">
@@ -23,6 +24,12 @@
 
 
     </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 
 </html>
