--- a/index.html
+++ b/index.html
@@ -25,6 +25,72 @@
 
     </header>
     <main>
+        <table>
+            <thead>
+                <tr>
+                    <th>S/N</th>
+                    <th>NAME OF PRODUCT</th>
+                    <th>PRODUCT DESCRIBTION</th>
+                    <th>price of product</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>1</td>
+                    <td>samsung</td>
+                    <td>Phone call</td>
+                    <td>500000</td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>codole</td>
+                    <td>gaming</td>
+                    <td>30000</td>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td>ipad</td>
+                    <td>gaming</td>
+                    <td>230000</td>
+                </tr>
+                <tr>
+                    <td>5</td>
+                    <td>radio</td>
+                    <td>listening to news</td>
+                    <td>23004</td>
+                </tr>
+                <tr>
+                    <td>6</td>
+                    <td>laptop</td>
+                    <td>programming</td>
+                    <td>2310000</td>
+                </tr>
+                <tr>
+                    <td>7</th>
+                    <td>tablet</td>
+                    <td>gaming</td>
+                    <td>506500</td>
+                </tr>
+                <tr>
+                    <td>8</td>
+                    <td>television</td>
+                    <td>watching</td>
+                    <td>500000</td>
+                </tr>
+                <tr>
+                    <td>9</td>
+                    <td>iphone</td>
+                    <td>Phone call</td>
+                    <td>600000</td>
+                </tr>
+                <tr>
+                    <td>10</td>
+                    <td>charger</td>
+                    <td>charging</td>
+                    <td>230000</td>
+                </tr>
+            </tbody>
+        </table>
 
     </main>
     <footer>
