--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
 
 
     </header>
+
     <main>
-        <table>
+        <table width="100%" border="1" cellspacing="2" cellpadding="2">
             <thead>
                 <tr>
                     <th>S/N</th>
@@ -93,6 +94,7 @@
         </table>
 
     </main>
+
     <footer>
 
     </footer>
