--- a/aboutUs.html
+++ b/aboutUs.html
@@ -9,22 +9,73 @@
 
 <body>
     <header>
-        <img src="jeff.jpeg" alt="jeff" width="38x38">
-        <nav>
-            <a href="index.html">Homepage</a>
-            <p><a href="contact.html">Contact</a></p>
-            <p><a href="aboutUs.html">AboutUs</a></p>
-            <p><a href="termsAndConditions.html">Terms And Conditions</a></p>
-
-
-        </nav>
-        <div class="profile">
-            <img src="../dangote.jpeg" alt="dangote">
-        </div>
-
+        <h1>About US</h1>
 
     </header>
     <main>
+        <ul>
+            <li>
+                <a href="#section1">section1</a><br>
+                <a href="#section2">section2</a><br>
+                <a href="#section3">section3</a><br>
+                <a href="#section4">section4</a><br>
+                <a href="#section5">section5</a><br>
+                <a href="#section6">section6</a><br>
+                <a href="#section7">section7</a><br>
+
+            </li>
+        </ul>
+        <div>
+            <div id="section1">
+                <h2>section1</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestiae inventore, quam sed possimus
+                    expedita, quis non et, error accusantium qui tempore ullam rem delectus fugit deserunt nihil hic
+                    perspiciatis! Repudiandae.</p>
+            </div>
+
+            <div id="section2">
+                <h2>section2</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestiae inventore, quam sed possimus
+                    expedita, quis non et, error accusantium qui tempore ullam rem delectus fugit deserunt nihil hic
+                    perspiciatis! Repudiandae.</p>
+            </div>
+
+            <div id="section3">
+                <h2>section3</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestiae inventore, quam sed possimus
+                    expedita, quis non et, error accusantium qui tempore ullam rem delectus fugit deserunt nihil hic
+                    perspiciatis! Repudiandae.</p>
+            </div>
+
+            <div id="section4">
+                <h2>section4</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestiae inventore, quam sed possimus
+                    expedita, quis non et, error accusantium qui tempore ullam rem delectus fugit deserunt nihil hic
+                    perspiciatis! Repudiandae.</p>
+            </div>
+
+            <div id="section5">
+                <h2>section5</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestiae inventore, quam sed possimus
+                    expedita, quis non et, error accusantium qui tempore ullam rem delectus fugit deserunt nihil hic
+                    perspiciatis! Repudiandae.</p>
+            </div>
+
+            <div id="section6">
+                <h2>section6</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestiae inventore, quam sed possimus
+                    expedita, quis non et, error accusantium qui tempore ullam rem delectus fugit deserunt nihil hic
+                    perspiciatis! Repudiandae.</p>
+            </div>
+
+            <div id="section7">
+                <h2>section7</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestiae inventore, quam sed possimus
+                    expedita, quis non et, error accusantium qui tempore ullam rem delectus fugit deserunt nihil hic
+                    perspiciatis! Repudiandae.</p>
+            </div>
+        </div>
+
 
     </main>
     <footer>
